# systematic-search-generator

./: .gitignore  GOOD_COMMAND.md  IDEAS2.md  PLAN.md  README.md  RULES.md  basic-benchmark.sh  big-bench.sh  compare_query.py  devlog.md  full-benchmark.sh  generate_query.py  pyproject.toml  run_generate.sh  splash_messages.txt
benchmarks/: full-benchmark.sh  run_generate.sh
docs/: APPROACH.md  IDEAS.md  ITERATION_LOG.md  PIPELINE_USAGE.md
ideas/: IDEAS2.md  IDEAS3.md  IDEAS4.md  ITERATION_LOG.md  TESTING_PLAN.md  best-results.md  devlog.md
results/: comparison_report.md  comparison_results.csv
src/: compare_search.py  evaluate_recall.py  generate_query.py
src/cache/: citation_cache.py  mesh_expansion_cache.py  pubmed_index_cache.py  query_results_cache.py  strategy_cache.py
src/citation/: openalex.py
src/discovery/: file_resolver.py  study_finder.py
src/evaluation/: comparator.py  metrics.py  reporter.py
src/llm/: openai_client.py  prompts.py  query_generator.py  strategy_extractor.py
src/mesh/: __init__.py  mesh_db.py
src/pipeline/: config.py  query_builder.py  runner.py
src/pubmed/: __init__.py  mesh_expansion.py  search_executor.py
src/scripts/: README.md  download_seed_papers.py  extract_prospero_findings.py
tests/: test_query_builder.py
